--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,6 @@
 <h1> <%= @name1 %> vs. <%= @name2 %> </h1>
 <p> <%= @name2 %>: 0HP </p>
+<form action="/attack">
+<input type="submit" value="Attack Dave">
+</form>
+
