--- a/views/index.erb
+++ b/views/index.erb
@@ -9,5 +9,5 @@
    Player 2 name
    <input type="text" name="name2">
  </label>
- <input type="submit" value="Submit">
+ <input type="submit" value="Submit!">
 </form>
