--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,6 +1,5 @@
-<%= @player_1_name %> attacks <%= @player_2_name %>
+<%= @player_1_name.name %> attacks <%= @player_2_name.name %>
 
 <br><br>
-Attack successful, dealt 10HP damage!!
-<br>
-<%= @player_2_name %>: 90HP
+
+<%= @player_2_name.name %>: 90HP
